--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 <div class="hero">
-    <div class="textcontainer">
+    <div class="text-container">
 
         <h2 class="lato-bold">Rent a car near YOU</h2>
         <h3 class="lato-bold">Feeling the urge to go? Absolutely!</h3>
@@ -60,21 +60,21 @@
                 <h3 class="lato-light">TRY NOW, CARS NEAR YOU main</h3>
                 <div class="row">
                     <div class="col-sm-6">
-                        <img src="https://source.unsplash.com/random/?car,white" width="200px" height="200px" alt="">
+                        <img src="https://images.unsplash.com/photo-1510821098199-79510310fa52?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="200px" height="200px" alt="">
                     </div>
 
                     <div class="col-sm-6">
-                        <img src="https://source.unsplash.com/random/?car,red" width="200px" height="200px" alt="">
+                        <img src="https://images.unsplash.com/photo-1669510337122-07ebb76360a0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="200px" height="200px" alt="">
                     </div>
                 </div>
                 <!-- <div class="container"> -->
                 <div class="row">
                     <div class="col-sm-6">
-                        <img src="https://source.unsplash.com/random/?car,yellow" width="200px" height="200px" alt="">
+                        <img src="https://images.unsplash.com/photo-1523998172836-07d4ac80b873?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D " width="200px" height="200px" alt="">
                     </div>
 
                     <div class="col-sm-6">
-                        <img src="https://source.unsplash.com/random/?car,black" width="200px" height="200px" alt="">
+                        <img src="https://images.unsplash.com/photo-1516771317026-14d76f5396e5?q=80&w=2067&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="200px" height="200px" alt="">
                     </div>
                     <!-- </div> -->
                 </div>
@@ -125,7 +125,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <img src="https://source.unsplash.com/random/?car,Holidays" width="100px" height="100px" alt=""
+                        <² src="https://source.unsplash.com/random/?car,Holidays" width="100px" height="100px" alt=""
                             srcset="">
                         <h5>Holidays</h5>
                     </div>
