--- a/templates/help.html
+++ b/templates/help.html
@@ -1,40 +1,59 @@
-{% extends "base.html" %}
-
-{% block title %}Help{% endblock %}
-{% block content %}
+{% extends "base.html" %} {% block title %}Help{% endblock %} {% block content
+%}
 <div class="helpHero">
-    <div class="container p-5 ">
-        <form action="" class="row align-items-center justify-content-center">
-            <div class="col-auto">
-                <input type="text" class="form-control" style="width: 500PX;"
-                    placeholder="Insurance, additional driver, extension...">
-            </div>
-            <div class="col-auto">
-                <button type="submit" class="btn btn-style" role="search"><i class="bi bi-search me-2"></i>
-                    Search</button>
-            </div>
-        </form>
-    </div>
-
+  <div class="container p-5">
+    <form action="" class="row align-items-center justify-content-center">
+      <div class="col-auto">
+        <input
+          type="text"
+          class="form-control"
+          style="width: 500px"
+          placeholder="Insurance, additional driver, extension..."
+        />
+      </div>
+      <div class="col-auto">
+        <button type="submit" class="btn btn-style" role="search">
+          <i class="bi bi-search me-2"></i> Search
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
 <div class="links p-5 mx-5">
-    <div class="container ">
-        <h4 class="" style="color: #43E094;">Eligibility and General Terms and Conditions of Use and Sale</h4>
-        <a href="" class="d-block my-3 text-black text-decoration-none">Information about my data</a>
-        <a href="" class="d-block my-3 text-black text-decoration-none">General Conditions of Use</a>
-        <a href="" class="d-block my-3 text-black text-decoration-none">OuiCar Connect Specific Conditions of Use</a>
-        <a href="" class="d-block my-3 text-black text-decoration-none">Specific Conditions of Use (country :
-            Morocco)</a>
-        <a href="" class="d-block my-3 text-black text-decoration-none">Legal notices</a>
-        <a href="" class="d-block my-3 text-black text-decoration-none">Privacy policy</a>
-    </div>
+  <div class="container">
+    <h4 class="" style="color: #43e094">
+      Eligibility and General Terms and Conditions of Use and Sale
+    </h4>
+    <a href="" class="d-block my-3 text-black text-decoration-none"
+      >Information about my data</a
+    >
+    <a href="" class="d-block my-3 text-black text-decoration-none"
+      >General Conditions of Use</a
+    >
+    <a href="" class="d-block my-3 text-black text-decoration-none"
+      >OuiCar Connect Specific Conditions of Use</a
+    >
+    <a href="" class="d-block my-3 text-black text-decoration-none"
+      >Specific Conditions of Use (country : Morocco)</a
+    >
+    <a href="" class="d-block my-3 text-black text-decoration-none"
+      >Legal notices</a
+    >
+    <a href="" class="d-block my-3 text-black text-decoration-none"
+      >Privacy policy</a
+    >
+  </div>
 </div>
-<div class="container pb-5 text-center ">
-    <p class="fw-bold ">Join us at</p>
-    <a href="https://web.facebook.com/el.walid.bousmaha/" target="_blank"><i
-            class="bi bi-facebook text-dark mx-1 px-1"></i></a>
-    <a href="https://www.instagram.com/el.walid.bousmaha" target="_blank"><i
-            class="bi bi-instagram text-dark mx-1 px-1"></i></a>
-    <a href="https://twitter.com/EBousmaha" target="_blank"><i class="bi bi-twitter text-dark mx-1 px-1"></i></a>
+<div class="container pb-5 text-center">
+  <p class="fw-bold">Join us at</p>
+  <a href="https://web.facebook.com/el.walid.bousmaha/" target="_blank"
+    ><i class="bi bi-facebook text-dark mx-1 px-1"></i
+  ></a>
+  <a href="https://www.instagram.com/el.walid.bousmaha" target="_blank"
+    ><i class="bi bi-instagram text-dark mx-1 px-1"></i
+  ></a>
+  <a href="https://twitter.com/EBousmaha" target="_blank"
+    ><i class="bi bi-twitter text-dark mx-1 px-1"></i
+  ></a>
 </div>
 {% endblock %}
