--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,24 +1,74 @@
 {% extends "base.html" %} {% block title %}Contact us{% endblock %} {% block
 content %}
-<div class="p-5">
-  <h2 class="display-4 text-center">How can we help you?</h2>
-  <p class="fw-light lead text-start px-5">
-    Help us answer you faster! Specify your problem by filling in the fields
-    below which will allow us to direct your question to the appropriate
-    department. Be precise and if necessary, do not hesitate to attach
-    photocopies of documents to your message.
-  </p>
-  <form action="" method="post" enctype="multipart/form-data">
-    {{ form.hidden_tag() }} {{ form.email }} {{ form.subject }} {{ form.message
-    }} {{ form.file }} {{ form.submit }}
-  </form>
-  <div class="container text-center">
-    <p class="fw-bold">Join us at</p>
-    <a target="_blank" href="https://www.instagram.com/cricars_ma"
-      ><i class="bi bi-instagram text-dark mx-1 px-1"></i
-    ></a>
-    <a href=""><i class="bi bi-twitter text-dark mx-1 px-1"></i></a>
-    <a href=""><i class="bi bi-facebook text-dark mx-1 px-1"></i></a>
+
+<h2 class="display-4 text-center">How can we help you?</h2>
+
+{% with messages = get_flashed_messages(with_categories=true) %} {% if messages
+%} {% for category, message in messages %}
+<div class="alert alert-{{ category }}">{{ message }}</div>
+{% endfor %} {% endif %} {% endwith %}
+
+<form
+  action=""
+  method="post"
+  enctype="multipart/form-data"
+  class="w-75 mx-auto"
+>
+  {{ form.hidden_tag() }}
+
+  <div class="form-group">
+    {{ form.email(class_='form-control mt-3', placeholder='Your Email') }} {% if
+    form.email.errors %}
+    <ul class="errors">
+      {% for error in form.email.errors %}
+      <li style="color: red">{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
   </div>
+
+  <div class="form-group">
+    {{ form.subject(class_='form-control mt-3', placeholder='Subject') }} {% if
+    form.subject.errors %}
+    <ul class="errors">
+      {% for error in form.subject.errors %}
+      <li style="color: red">{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+  </div>
+
+  <div class="form-group">
+    {{ form.message(class_='form-control mt-3', placeholder='Your Message') }}
+    {% if form.message.errors %}
+    <ul class="errors">
+      {% for error in form.message.errors %}
+      <li style="color: red">{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+  </div>
+
+  <div class="form-group">
+    {{ form.file(class_='form-control mt-3') }} {% if form.file.errors %}
+    <ul class="errors">
+      {% for error in form.file.errors %}
+      <li style="color: red">{{ error }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+  </div>
+
+  {{ form.submit(class_='btn btn-style col-12 mt-3') }}
+</form>
+
+<div class="container text-center mt-4">
+  <p class="fw-bold">Join us at</p>
+  <a target="_blank" href="https://www.instagram.com/cricars_ma"
+    ><i class="bi bi-instagram text-dark mx-1 px-1"></i
+  ></a>
+  <a href=""><i class="bi bi-twitter text-dark mx-1 px-1"></i></a>
+  <a href=""><i class="bi bi-facebook text-dark mx-1 px-1"></i></a>
 </div>
+
 {% endblock %}
