--- a/templates/footer.html
+++ b/templates/footer.html
@@ -31,7 +31,7 @@
                 <p><a href="#" class="text-decoration-none">Professionals</a></p>
             </div>
             <div class="col-md-3 col-sm-6 footer-section">
-                <h4>Guest</h4>
+                <h4>guests</h4>
                 <p><a href="#" class="text-decoration-none" class="text-decoration-none">Rental</a></p>
                 <p><a href="" class="text-decoration-none" class="text-decoration-none">Experience</a></p>
                 <p><a href="insurance" class="text-decoration-none" class="text-decoration-none">Insurance</a></p>
