--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
 
             <div class="col-lg-6">
                 <!-- Content for the second column -->
-                <h3 class="la">OVER 3 million guest trust us</h3>
+                <h3 class="la">OVER 3 million guests trust us</h3>
                 <div class="row">
                     <div class="col-sm-12 testimonial">
                         <p>testimonial</p>
