--- a/templates/insurance.html
+++ b/templates/insurance.html
@@ -1,177 +1,239 @@
-{% extends "base.html" %}
-
-{% block title %}insurance for-owner & guest {% endblock %}
-{% block content %}
+{% extends "base.html" %} {% block title %}insurance for-owner & guests {%
+endblock %} {% block content %}
 <!-- ========== Start HERO ========== -->
 
 <section class="insurance-hero p-5">
-    <div class="container text-start text-light ">
-        <div class="row">
-            <div class="col-lg-8 p-5">
-                <h1>Get on the road with XXX</h1>
-                <p class="fw-bold h5">For each rental made with Cricars, our insurance automatically replaces the car
-                    host's insurance for the entire duration of the rental. The cost of the insurance is included in the
-                    prices displayed on the website.</p>
-            </div>
-        </div>
+  <div class="container text-start text-light">
+    <div class="row">
+      <div class="col-lg-8 p-5">
+        <h1>Get on the road with XXX</h1>
+        <p class="fw-bold h5">
+          For each rental made with Cricars, our insurance automatically
+          replaces the car host's insurance for the entire duration of the
+          rental. The cost of the insurance is included in the prices displayed
+          on the website.
+        </p>
+      </div>
     </div>
+  </div>
 </section>
 <!-- ========== End HERO ========== -->
 
-<!-- ========== Start Guest and host insurance section ========== -->
+<!-- ========== Start guests and host insurance section ========== -->
 <div class="container p-5">
-    <div class="row ">
-        <!-- ========== Start Guest insurance section ========== -->
-        <div class="col-lg-6 mt-5">
-            <div class="bg-info">
-                <h3 class="text-center text-black p-2">Guest</h3>
-                <div class="container">
-                    <div class="row pb-4">
-                        <div class="col-12">
-                            <div class="bg-white border border-primary rounded  m-3 p-1 ">
-                                <h5 class="text-dark text-start w-75">Civil liability insurance included</h5>
-                                <p class="text-muted w-75">- Bodily injury: unlimited.</p>
-                                <p class="text-muted w-75">- Property damage: limited to XXX MAD (including fire,
-                                    explosion 2 million)
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="bg-white border border-primary rounded  m-3 p-1 ">
-                                <h5 class="text-dark text-start w-75">24-hour breakdown and accident assistance included
-                                </h5>
-                                <p class="text-muted w-75">In the event of a breakdown or accident, rented vehicles are
-                                    automatically entitled to 0 kilometer 24/7 assistance.</p>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="bg-white border border-primary rounded  m-3 p-1 ">
-                                <h5 class="text-dark text-start w-75">Additional insurance and assistance options</h5>
-                                <p class="text-muted w-75">These additional guarantees are offered as an option, when
-                                    booking
-                                    the vehicle or at any time before the start of the rental period</p>
-                            </div>
-                        </div>
-                        <a href="" class="btn btn-style w-50 m-auto">Find out more</a>
-                    </div>
-                </div>
+  <div class="row">
+    <!-- ========== Start guests insurance section ========== -->
+    <div class="col-lg-6 mt-5">
+      <div class="bg-info">
+        <h3 class="text-center text-black p-2">guests</h3>
+        <div class="container">
+          <div class="row pb-4">
+            <div class="col-12">
+              <div class="bg-white border border-primary rounded m-3 p-1">
+                <h5 class="text-dark text-start w-75">
+                  Civil liability insurance included
+                </h5>
+                <p class="text-muted w-75">- Bodily injury: unlimited.</p>
+                <p class="text-muted w-75">
+                  - Property damage: limited to XXX MAD (including fire,
+                  explosion 2 million)
+                </p>
+              </div>
             </div>
-        </div>
-        <!-- ========== End Guest insurance section ========== -->
-        <!-- ========== Start Host insurance section ========== -->
-        <div class="col-lg-6 mt-5">
-            <div class="bg-info">
-                <h3 class="text-center text-black p-2">Host</h3>
-                <div class="container">
-                    <div class="row pb-4">
-                        <div class="col-12">
-                            <div class="bg-white border border-primary rounded  m-3 p-1 ">
-                                <h5 class="text-dark text-start w-75">XXX insurance included</h5>
-                                <p class="text-muted w-75">Our insurance automatically replaces your vehicle's insurance
-                                    for
-                                    the entire rental period.</p>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="bg-white border border-primary rounded  m-3 p-1 ">
-                                <h5 class="text-dark text-start w-75">Criminal defense and recourse following an
-                                    accident
-                                </h5>
-                                <p class="text-muted w-75">Coverage of the costs for initiating legal proceedings in the
-                                    event of a dispute with a third party.</p>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="bg-white border border-primary rounded m-3 p-1 ">
-                                <h5 class="text-dark text-start w-75">24-hour breakdown and accident assistance included
-                                </h5>
-                                <p class="text-muted w-75">In the event of a breakdown or accident, rented vehicles are
-                                    automatically entitled to 0 kilometer 24/7 assistance.</p>
-                            </div>
-                        </div>
-                        <a href="" class="btn w-50 m-auto btn-style">Find out more</a>
-
-                    </div>
-                </div>
+            <div class="col-12">
+              <div class="bg-white border border-primary rounded m-3 p-1">
+                <h5 class="text-dark text-start w-75">
+                  24-hour breakdown and accident assistance included
+                </h5>
+                <p class="text-muted w-75">
+                  In the event of a breakdown or accident, rented vehicles are
+                  automatically entitled to 0 kilometer 24/7 assistance.
+                </p>
+              </div>
             </div>
+            <div class="col-12">
+              <div class="bg-white border border-primary rounded m-3 p-1">
+                <h5 class="text-dark text-start w-75">
+                  Additional insurance and assistance options
+                </h5>
+                <p class="text-muted w-75">
+                  These additional guarantees are offered as an option, when
+                  booking the vehicle or at any time before the start of the
+                  rental period
+                </p>
+              </div>
+            </div>
+            <a href="" class="btn btn-style w-50 m-auto">Find out more</a>
+          </div>
         </div>
+      </div>
     </div>
-
+    <!-- ========== End guests insurance section ========== -->
+    <!-- ========== Start Host insurance section ========== -->
+    <div class="col-lg-6 mt-5">
+      <div class="bg-info">
+        <h3 class="text-center text-black p-2">Host</h3>
+        <div class="container">
+          <div class="row pb-4">
+            <div class="col-12">
+              <div class="bg-white border border-primary rounded m-3 p-1">
+                <h5 class="text-dark text-start w-75">
+                  XXX insurance included
+                </h5>
+                <p class="text-muted w-75">
+                  Our insurance automatically replaces your vehicle's insurance
+                  for the entire rental period.
+                </p>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="bg-white border border-primary rounded m-3 p-1">
+                <h5 class="text-dark text-start w-75">
+                  Criminal defense and recourse following an accident
+                </h5>
+                <p class="text-muted w-75">
+                  Coverage of the costs for initiating legal proceedings in the
+                  event of a dispute with a third party.
+                </p>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="bg-white border border-primary rounded m-3 p-1">
+                <h5 class="text-dark text-start w-75">
+                  24-hour breakdown and accident assistance included
+                </h5>
+                <p class="text-muted w-75">
+                  In the event of a breakdown or accident, rented vehicles are
+                  automatically entitled to 0 kilometer 24/7 assistance.
+                </p>
+              </div>
+            </div>
+            <a href="" class="btn w-50 m-auto btn-style">Find out more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<!-- ========== End Guest and host insurance section ========== -->
+<!-- ========== End guests and host insurance section ========== -->
 <!-- ========== Start FAQ ========== -->
 <div class="container p-5">
-    <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                    aria-expanded="true" aria-controls="collapseOne">
-                    What happens if there's an accident?
-                </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, recusandae placeat? Fuga provident
-                    ut perferendis officiis, facilis iusto rem illo amet deleniti eaque debitis delectus sequi
-                    necessitatibus exercitationem aliquid alias modi vero harum deserunt magni ratione sapiente ullam
-                    facere? Fugiat sint eius eligendi distinctio suscipit. Suscipit, recusandae error. Reprehenderit
-                    sequi rem culpa, soluta quos fuga eius accusamus! Corporis ratione sed optio laudantium fuga fugiat
-                    dolores a?
-                </div>
-            </div>
+  <div class="accordion" id="accordionExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button
+          class="accordion-button"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseOne"
+          aria-expanded="true"
+          aria-controls="collapseOne"
+        >
+          What happens if there's an accident?
+        </button>
+      </h2>
+      <div
+        id="collapseOne"
+        class="accordion-collapse collapse show"
+        data-bs-parent="#accordionExample"
+      >
+        <div class="accordion-body">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam,
+          recusandae placeat? Fuga provident ut perferendis officiis, facilis
+          iusto rem illo amet deleniti eaque debitis delectus sequi
+          necessitatibus exercitationem aliquid alias modi vero harum deserunt
+          magni ratione sapiente ullam facere? Fugiat sint eius eligendi
+          distinctio suscipit. Suscipit, recusandae error. Reprehenderit sequi
+          rem culpa, soluta quos fuga eius accusamus! Corporis ratione sed optio
+          laudantium fuga fugiat dolores a?
         </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    What is the insurance "deductible?"
-                </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi deserunt minima obcaecati, atque
-                    eligendi placeat rerum fugiat deleniti non, repudiandae, adipisci itaque cupiditate mollitia quasi
-                    assumenda! Tempora provident enim laboriosam quos, aliquam facilis dolorem officia! Non numquam
-                    nesciunt enim unde soluta quia facere.
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Additional insurance and assistance options
-                </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quae libero numquam
-                    dolorem, blanditiis ea excepturi eos. Debitis totam nihil beatae officia aperiam aliquam quos at
-                    unde nostrum corporis, reiciendis ipsum minus qui provident excepturi adipisci sint, nisi
-                    corrupti. Deleniti vel corporis saepe, non rerum harum consequatur facere molestiae voluptatem
-                    doloribus quidem itaque explicabo! Voluptatum?
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                    What should I do if the car breaks down?
-                </button>
-            </h2>
-            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, quibusdam ea nulla culpa
-                    officia quam praesentium tempora voluptatem nisi eveniet quis? Consectetur, adipisci veritatis nisi
-                    accusantium maxime natus nemo dolorem.
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button
+          class="accordion-button collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseTwo"
+          aria-expanded="false"
+          aria-controls="collapseTwo"
+        >
+          What is the insurance "deductible?"
+        </button>
+      </h2>
+      <div
+        id="collapseTwo"
+        class="accordion-collapse collapse"
+        data-bs-parent="#accordionExample"
+      >
+        <div class="accordion-body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi deserunt
+          minima obcaecati, atque eligendi placeat rerum fugiat deleniti non,
+          repudiandae, adipisci itaque cupiditate mollitia quasi assumenda!
+          Tempora provident enim laboriosam quos, aliquam facilis dolorem
+          officia! Non numquam nesciunt enim unde soluta quia facere.
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button
+          class="accordion-button collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseThree"
+          aria-expanded="false"
+          aria-controls="collapseThree"
+        >
+          Additional insurance and assistance options
+        </button>
+      </h2>
+      <div
+        id="collapseThree"
+        class="accordion-collapse collapse"
+        data-bs-parent="#accordionExample"
+      >
+        <div class="accordion-body">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo
+          quae libero numquam dolorem, blanditiis ea excepturi eos. Debitis
+          totam nihil beatae officia aperiam aliquam quos at unde nostrum
+          corporis, reiciendis ipsum minus qui provident excepturi adipisci
+          sint, nisi corrupti. Deleniti vel corporis saepe, non rerum harum
+          consequatur facere molestiae voluptatem doloribus quidem itaque
+          explicabo! Voluptatum?
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button
+          class="accordion-button collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseFour"
+          aria-expanded="false"
+          aria-controls="collapseFour"
+        >
+          What should I do if the car breaks down?
+        </button>
+      </h2>
+      <div
+        id="collapseFour"
+        class="accordion-collapse collapse"
+        data-bs-parent="#accordionExample"
+      >
+        <div class="accordion-body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum,
+          quibusdam ea nulla culpa officia quam praesentium tempora voluptatem
+          nisi eveniet quis? Consectetur, adipisci veritatis nisi accusantium
+          maxime natus nemo dolorem.
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- ========== End FAQ ========== -->
-
 
 {% endblock %}
